--- a/src/supervised.ipynb
+++ b/src/supervised.ipynb
@@ -18,13 +18,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HiDkKvqA5rV_"
+        "id": "HiDkKvqA5rV_",
+        "outputId": "9c644517-674a-48d1-f264-86e07c773790",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
       },
       "source": [
-        ""
+        "Hello World!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-a0b65939670b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Hello World!\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     }
   ]
 }
