--- a/src/supervised.ipynb
+++ b/src/supervised.ipynb
@@ -16,29 +16,386 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8oAFT3fveI9A"
+      },
+      "source": [
+        "- (Gaussian) Multinomial Naive Bayes with Grid Search\n",
+        "- Logistic Regression\n",
+        "- Support Vector Machines\n",
+        "- Decision Tree\n",
+        "- Random Forest & Bagging Classifier\n",
+        "- Boosting XGBoost\n",
+        "- Neural Nets\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "HiDkKvqA5rV_",
-        "outputId": "9c644517-674a-48d1-f264-86e07c773790",
+        "id": "IQk1WIEveOgs"
+      },
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "import sklearn.datasets as datasets\n",
+        "from sklearn.kernel_approximation import Nystroem\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.datasets import make_classification\n",
+        "from sklearn.ensemble import BaggingClassifier\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.datasets import make_hastie_10_2\n",
+        "from sklearn.ensemble import GradientBoostingClassifier"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jhztfSqVeTgk",
+        "outputId": "75675487-7eb7-4e16-e466-f768414b02dd",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "Hello World!"
+        "# Multinomial Naive Bayes\n",
+        "rng = np.random.RandomState(1)\n",
+        "X = rng.randint(5, size=(6, 100))\n",
+        "y = np.array([1, 2, 3, 4, 5, 6])\n",
+        "clf = MultinomialNB()\n",
+        "clf.fit(X, y)\n",
+        "print(clf.predict(X[2:3]))"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-a0b65939670b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Hello World!\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "[3]\n"
+          ],
+          "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kN85KiXXedmH",
+        "outputId": "3ff8ead1-ec50-42b5-aa19-dd3dd880e9b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Gaussian NB\n",
+        "X = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])\n",
+        "Y = np.array([1, 1, 1, 2, 2, 2])\n",
+        "clf = GaussianNB()\n",
+        "clf.fit(X, Y)\n",
+        "print(clf.predict([[-0.8, -1]]))\n",
+        "\n",
+        "clf_pf = GaussianNB()\n",
+        "clf_pf.partial_fit(X, Y, np.unique(Y))\n",
+        "print(clf_pf.predict([[-0.8, -1]]))"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1]\n",
+            "[1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mS0VeOXTf3o_",
+        "outputId": "aa5e8046-6733-41df-c997-197215a76886",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Logistic Regression, https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html\n",
+        "X, y = load_iris(return_X_y=True)\n",
+        "clf = LogisticRegression(random_state=0, max_iter = 50000).fit(X, y)\n",
+        "print(clf.predict(X[:2, :]))\n",
+        "\n",
+        "print(clf.predict_proba(X[:2, :]))\n",
+        "print(clf.score(X, y))"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 0]\n",
+            "[[9.81583143e-01 1.84168427e-02 1.45011486e-08]\n",
+            " [9.71339457e-01 2.86605127e-02 3.01872659e-08]]\n",
+            "0.9733333333333334\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jx7DzWnAimTq",
+        "outputId": "24ec0751-06f8-4a80-9af2-b8387e4cf9e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Vanilla SVM, https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html\n",
+        "X = np.array([[-1, -1], [-2, -1], [1, 1], [2, 1]])\n",
+        "y = np.array([1, 1, 2, 2])\n",
+        "clf = make_pipeline(StandardScaler(), SVC(gamma='auto'))\n",
+        "clf.fit(X, y)\n",
+        "print(clf.predict([[-0.8, -1]]))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M70ytPdOn7E2",
+        "outputId": "a8377286-ae78-48ec-b13c-7eb68ed3d56f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Linear SVM for large datasets, https://scikit-learn.org/stable/modules/generated/sklearn.svm.LinearSVC.html#sklearn.svm.LinearSVC\n",
+        "X, y = datasets.load_digits(n_class=9, return_X_y=True)\n",
+        "data = X / 16\n",
+        "feature_map_nystroem = Nystroem(gamma=.2,\n",
+        "                                random_state=1,\n",
+        "                                n_components=300)\n",
+        "data_transformed = feature_map_nystroem.fit_transform(data)\n",
+        "\n",
+        "clf = make_pipeline(StandardScaler(),\n",
+        "                  LinearSVC(random_state=0, tol=1e-5, max_iter = 50000))\n",
+        "clf.fit(data_transformed, y)\n",
+        "clf.score(data_transformed, y)"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6frSiipjo0y2",
+        "outputId": "a842098b-fc12-405a-d97c-290b34469f24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Random Forest Classification, https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
+        "X, y = make_classification(n_samples=1000, n_features=4,\n",
+        "                           n_informative=2, n_redundant=0,\n",
+        "                           random_state=0, shuffle=False)\n",
+        "clf = RandomForestClassifier(max_depth=2, random_state=0)\n",
+        "clf.fit(X, y)\n",
+        "print(clf.predict([[0, 0, 0, 0]]))"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MWRILYeStNbb",
+        "outputId": "ace8e7e9-6851-4327-902c-38d175cd0d4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Decision Tree Classifier, https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html#sklearn.tree.DecisionTreeClassifier\n",
+        "clf = DecisionTreeClassifier(random_state=0)\n",
+        "iris = load_iris()\n",
+        "cross_val_score(clf, iris.data, iris.target, cv=10)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.        , 0.93333333, 1.        , 0.93333333, 0.93333333,\n",
+              "       0.86666667, 0.93333333, 1.        , 1.        , 1.        ])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QkLbsnHLqi8X",
+        "outputId": "47372b8e-7647-42de-b796-1e96088031fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Bagging Classifier, https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.BaggingClassifier.html\n",
+        "X, y = make_classification(n_samples=100, n_features=4,\n",
+        "                           n_informative=2, n_redundant=0,\n",
+        "                           random_state=0, shuffle=False)\n",
+        "clf = BaggingClassifier(base_estimator=SVC(),\n",
+        "                        n_estimators=10, random_state=0).fit(X, y)\n",
+        "clf.predict([[0, 0, 0, 0]])"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W32gGIvGsWli",
+        "outputId": "f1385b58-3e2c-404c-9c13-20c2a28d3b92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Gradient Boosting Classifier, https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingClassifier.html\n",
+        "X, y = make_hastie_10_2(random_state=0)\n",
+        "X_train, X_test = X[:2000], X[2000:]\n",
+        "y_train, y_test = y[:2000], y[2000:]\n",
+        "\n",
+        "clf = GradientBoostingClassifier(n_estimators=100, learning_rate=1.0,\n",
+        "      max_depth=1, random_state=0).fit(X_train, y_train)\n",
+        "clf.score(X_test, y_test)"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.913"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nKka6VdKt2vU",
+        "outputId": "ba87a29d-0eff-4825-86ec-ffe7c6803f5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# MLP Classifier, https://scikit-learn.org/stable/modules/neural_networks_supervised.html\n",
+        "from sklearn.neural_network import MLPClassifier\n",
+        "X = [[0., 0.], [1., 1.]]\n",
+        "y = [0, 1]\n",
+        "clf = MLPClassifier(solver='lbfgs', alpha=1e-5,\n",
+        "                    hidden_layer_sizes=(5, 2), random_state=1)\n",
+        "\n",
+        "clf.fit(X, y)\n",
+        "clf.predict([[2., 2.], [-1., -2.]])"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SIhPUyNTu3QD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
