Add classification on multiple methods, with testing accuracy

--- a/src/supervised.ipynb
+++ b/src/supervised.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {
     "id": "IQk1WIEveOgs"
    },
@@ -35,10 +35,14 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "import sklearn.datasets as datasets\n",
     "from sklearn.kernel_approximation import Nystroem\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.datasets import make_classification\n",
     "from sklearn.ensemble import BaggingClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
+    "from sklearn.gaussian_process import GaussianProcessClassifier\n",
+    "from sklearn.gaussian_process.kernels import RBF\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.datasets import make_hastie_10_2\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,13 +152,13 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(data, label, test_size=0.33, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data, label, test_size=0.2, random_state=42)\n",
     "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +168,7 @@
        "             param_grid={'C': [1, 10], 'kernel': ('linear', 'rbf')})"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +198,7 @@
        "0.7471264367816092"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -222,10 +226,11 @@
        "       [  0,   4,   0,   7,   0,   0,   0,   8,   0,   0,  19],\n",
        "       [  0,   3,   0,   2,   0,   0,   0,   0,   0,   0,   0],\n",
        "       [  1,  13,   0,   7,   1,   0,   0,   0,   0,  11,  11],\n",
-       "       [  1,   2,   0,   2,   0,   0,   0,   0,   0,   0, 474]])"
+       "       [  1,   2,   0,   2,   0,   0,   0,   0,   0,   0, 474]],\n",
+       "      dtype=int64)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +257,7 @@
        "0.627039627039627"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -280,16 +285,63 @@
        "       [  0,   5,   0,   5,   0,   0,   0,   1,   0,   0,  10],\n",
        "       [  0,   2,   0,   0,   1,   0,   0,   0,   0,   0,   0],\n",
        "       [  0,   7,   0,   3,   1,   0,   0,   1,   0,   1,   8],\n",
-       "       [  0,   2,   0,   3,   0,   0,   0,   0,   0,   0, 216]])"
+       "       [  0,   2,   0,   3,   0,   0,   0,   0,   0,   0, 216]],\n",
+       "      dtype=int64)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "confusion_matrix(y_test, pred_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train/Test on Multiple Classifiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Linear SVM': 0.5151515151515151, 'RBF SVM': 0.6247086247086248, 'Gaussian Process': 0.62004662004662, 'Logistic RegressionDecision Tree': 0.5734265734265734, 'Random Forest': 0.4662004662004662, 'Neural Net': 0.5151515151515151, 'AdaBoost': 0.585081585081585, 'Naive Bayes': 0.5081585081585082, 'Bagging Classifier': 0.5547785547785548}\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"Linear SVM\", \"RBF SVM\", \"Gaussian Process\", \"Logistic Regression\"\n",
+    "         \"Decision Tree\", \"Random Forest\", \"Neural Net\", \"AdaBoost\",\n",
+    "         \"Naive Bayes\", \"Bagging Classifier\"]\n",
+    "         \n",
+    "classifiers = [\n",
+    "    SVC(kernel=\"linear\", C=0.025),\n",
+    "    SVC(gamma=2, C=1),\n",
+    "    GaussianProcessClassifier(1.0 * RBF(1.0)),\n",
+    "    LogisticRegression(random_state=0, max_iter = 5000),\n",
+    "    DecisionTreeClassifier(max_depth=5),\n",
+    "    RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1),\n",
+    "    MLPClassifier(alpha=1, max_iter=5000),\n",
+    "    AdaBoostClassifier(),\n",
+    "    GaussianNB(),\n",
+    "    BaggingClassifier(base_estimator=SVC(),\n",
+    "                        n_estimators=10, random_state=0)]\n",
+    "\n",
+    "score_dict = dict()\n",
+    "for name, clf in zip(names, classifiers):\n",
+    "        clf.fit(X_train, y_train)\n",
+    "        score = clf.score(X_test, y_test)\n",
+    "        score_dict[name] = score\n",
+    "print(score_dict)"
    ]
   },
   {
@@ -585,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -600,16 +652,13 @@
        "array([1, 0])"
       ]
      },
-     "execution_count": 44,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 19,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# MLP Classifier, https://scikit-learn.org/stable/modules/neural_networks_supervised.html\n",
-    "from sklearn.neural_network import MLPClassifier\n",
     "X = [[0., 0.], [1., 1.]]\n",
     "y = [0, 1]\n",
     "clf = MLPClassifier(solver='lbfgs', alpha=1e-5,\n",
@@ -649,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
