--- a/src/supervised.ipynb
+++ b/src/supervised.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {
     "id": "IQk1WIEveOgs"
    },
@@ -28,7 +28,7 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.datasets import load_iris\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LogisticRegression, LinearRegression, Ridge, Lasso, ElasticNet\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.pipeline import make_pipeline\n",
@@ -147,12 +147,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(870, 200) (429, 200) (870,) (429,)\n"
+      "(1039, 200) (260, 200) (1039,) (260,)\n"
      ]
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(data, label, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data, label, test_size=0.2, random_state=42, stratify=label)\n",
     "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
    ]
   },
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7471264367816092"
+       "0.7247353224254091"
       ]
      },
      "execution_count": 9,
@@ -216,17 +216,17 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 12,   4,   0,   9,   2,   0,   0,   1,   0,   1,  12],\n",
-       "       [  0,  68,   0,   6,   0,   0,   0,   1,   0,   0,  12],\n",
-       "       [  0,   5,   0,   4,   2,   0,   0,   0,   0,   1,   5],\n",
-       "       [  0,   8,   0,  48,   0,   0,   0,   0,   0,   0,  23],\n",
-       "       [  0,   4,   0,   5,  24,   0,   0,   0,   0,   0,   7],\n",
-       "       [  0,   5,   0,   9,   1,   4,   0,   0,   0,   0,  11],\n",
-       "       [  0,   0,   0,   2,   1,   0,   1,   1,   0,   1,   4],\n",
-       "       [  0,   4,   0,   7,   0,   0,   0,   8,   0,   0,  19],\n",
-       "       [  0,   3,   0,   2,   0,   0,   0,   0,   0,   0,   0],\n",
-       "       [  1,  13,   0,   7,   1,   0,   0,   0,   0,  11,  11],\n",
-       "       [  1,   2,   0,   2,   0,   0,   0,   0,   0,   0, 474]],\n",
+       "array([[ 20,  13,   0,   5,   1,   0,   0,   2,   0,   0,  13],\n",
+       "       [  1,  95,   0,   4,   1,   0,   0,   0,   0,   0,  12],\n",
+       "       [  2,  13,   2,   1,   0,   0,   0,   0,   0,   0,   5],\n",
+       "       [  2,  19,   0,  41,   1,   0,   0,   0,   0,   0,  23],\n",
+       "       [  1,  11,   0,   2,  20,   0,   0,   0,   0,   1,   9],\n",
+       "       [  2,  12,   0,   5,   0,   3,   0,   0,   0,   0,  14],\n",
+       "       [  0,   4,   0,   2,   0,   0,   6,   1,   0,   1,   4],\n",
+       "       [  2,   9,   0,   9,   1,   0,   0,   4,   0,   1,  21],\n",
+       "       [  0,   5,   0,   1,   0,   0,   0,   0,   0,   0,   0],\n",
+       "       [  3,  18,   0,   5,   0,   0,   0,   0,   0,   9,  17],\n",
+       "       [  1,   3,   0,   3,   0,   0,   0,   0,   0,   0, 553]],\n",
        "      dtype=int64)"
       ]
      },
@@ -254,7 +254,7 @@
     {
      "data": {
       "text/plain": [
-       "0.627039627039627"
+       "0.6538461538461539"
       ]
      },
      "execution_count": 11,
@@ -275,17 +275,17 @@
     {
      "data": {
       "text/plain": [
-       "array([[  7,   8,   0,   6,   0,   0,   0,   1,   0,   0,   4],\n",
-       "       [  1,  25,   0,  10,   2,   1,   0,   0,   0,   0,  15],\n",
-       "       [  0,   3,   0,   3,   1,   0,   0,   0,   0,   0,   5],\n",
-       "       [  1,   8,   0,  13,   0,   0,   0,   0,   0,   0,   7],\n",
-       "       [  0,   2,   0,   1,   5,   0,   0,   0,   0,   2,   5],\n",
-       "       [  0,   1,   0,   5,   0,   1,   0,   0,   0,   0,   8],\n",
-       "       [  2,   1,   0,   2,   2,   0,   0,   0,   0,   1,   4],\n",
-       "       [  0,   5,   0,   5,   0,   0,   0,   1,   0,   0,  10],\n",
-       "       [  0,   2,   0,   0,   1,   0,   0,   0,   0,   0,   0],\n",
-       "       [  0,   7,   0,   3,   1,   0,   0,   1,   0,   1,   8],\n",
-       "       [  0,   2,   0,   3,   0,   0,   0,   0,   0,   0, 216]],\n",
+       "array([[  6,   4,   0,   1,   0,   0,   0,   0,   0,   1,   1],\n",
+       "       [  0,  19,   0,   2,   0,   0,   0,   0,   0,   0,   7],\n",
+       "       [  0,   2,   0,   0,   2,   0,   0,   0,   0,   0,   2],\n",
+       "       [  0,   8,   0,   4,   1,   0,   0,   0,   0,   0,   9],\n",
+       "       [  0,   3,   0,   1,   5,   0,   0,   0,   0,   0,   2],\n",
+       "       [  0,   2,   0,   1,   1,   0,   0,   0,   0,   0,   5],\n",
+       "       [  1,   1,   1,   0,   0,   0,   0,   0,   0,   0,   1],\n",
+       "       [  0,   7,   0,   0,   0,   0,   0,   1,   0,   0,   4],\n",
+       "       [  0,   1,   0,   0,   0,   0,   0,   0,   0,   0,   1],\n",
+       "       [  0,   3,   0,   1,   1,   0,   0,   0,   0,   0,   8],\n",
+       "       [  0,   3,   0,   2,   0,   0,   0,   0,   0,   0, 135]],\n",
        "      dtype=int64)"
       ]
      },
@@ -302,19 +302,154 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train/Test on Multiple Classifiers"
+    "## Linear Regression & Evaluation of Different Types of Regularization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vanilla Linear Regression (No Regularization)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Linear SVM': 0.5151515151515151, 'RBF SVM': 0.6247086247086248, 'Gaussian Process': 0.62004662004662, 'Logistic RegressionDecision Tree': 0.5734265734265734, 'Random Forest': 0.4662004662004662, 'Neural Net': 0.5151515151515151, 'AdaBoost': 0.585081585081585, 'Naive Bayes': 0.5081585081585082, 'Bagging Classifier': 0.5547785547785548}\n"
+      "Training Accuracy: 0.6195824242931637\n",
+      "Training Accuracy: 0.4464623202341178\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg = LinearRegression().fit(X_train, y_train)\n",
+    "print(\"Training Accuracy: \" + str(reg.score(X_train, y_train)))\n",
+    "print(\"Training Accuracy: \" + str(reg.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ridge Regression (L2 Regularization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 10 candidates, totalling 100 fits\n",
+      "Training Accuracy: 0.5454773677585926\n",
+      "Testing Accuracy: 0.5169477873199229\n",
+      "{'alpha': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters = {'alpha':[1e-4, 1e-3, 1e-2, 0.1, 0.2, 0.5, 1, 2, 5, 10]}\n",
+    "rid = Ridge()\n",
+    "clf = GridSearchCV(rid, parameters, cv=10, verbose=1)\n",
+    "clf.fit(X_train, y_train)\n",
+    "print(\"Training Accuracy: \" + str(clf.score(X_train, y_train)))\n",
+    "print(\"Testing Accuracy: \" + str(clf.score(X_test, y_test)))\n",
+    "print(clf.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lasso Regression (L1 Regularization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 12 candidates, totalling 120 fits\n",
+      "Training Accuracy: 0.5869160640569879\n",
+      "Testing Accuracy: 0.49856041968169207\n",
+      "{'alpha': 0.001}\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters = {'alpha':[1e-5, 1e-4, 1e-3, 1e-2, 0.1, 0.2, 0.5, 1, 2, 5, 10, 100]}\n",
+    "\n",
+    "las = Lasso(max_iter = 10000)\n",
+    "clf = GridSearchCV(las, parameters, cv=10, verbose=1)\n",
+    "clf.fit(X_train, y_train)\n",
+    "print(\"Training Accuracy: \" + str(clf.score(X_train, y_train)))\n",
+    "print(\"Testing Accuracy: \" + str(clf.score(X_test, y_test)))\n",
+    "print(clf.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ElasticNet Regression (L1 + L2 Regularization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 84 candidates, totalling 840 fits\n",
+      "Training Accuracy: 0.5675894103664105\n",
+      "Testing Accuracy: 0.520764478468223\n",
+      "{'alpha': 0.001, 'l1_ratio': 0.05}\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters = {'alpha':[1e-5, 1e-4, 1e-3, 1e-2, 0.1, 0.2, 0.5, 1, 2, 5, 10, 100], 'l1_ratio':[0.05, 0.1, 0.15, 0.25, 0.5, 0.75, 1]}\n",
+    "\n",
+    "las = ElasticNet(max_iter = 10000)\n",
+    "clf = GridSearchCV(las, parameters, cv=10, verbose=1)\n",
+    "clf.fit(X_train, y_train)\n",
+    "print(\"Training Accuracy: \" + str(clf.score(X_train, y_train)))\n",
+    "print(\"Testing Accuracy: \" + str(clf.score(X_test, y_test)))\n",
+    "print(clf.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train/Test on Multiple Classifiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Linear SVM': 0.5384615384615384, 'RBF SVM': 0.6461538461538462, 'Gaussian Process': 0.6615384615384615, 'Logistic RegressionDecision Tree': 0.6192307692307693, 'Random Forest': 0.5, 'Neural Net': 0.5384615384615384, 'AdaBoost': 0.5769230769230769, 'Naive Bayes': 0.5384615384615384, 'Bagging Classifier': 0.5884615384615385}\n"
      ]
     }
    ],
