--- a/src/supervised.ipynb
+++ b/src/supervised.ipynb
@@ -884,7 +884,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Using data pipeline for bin"
+    "### Using data pipeline for binary logistic regression"
    ]
   },
   {
