Updated pipeline example and word2vec

--- a/src/Negative Sampler.ipynb
+++ b/src/Negative Sampler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "id": "funded-anchor",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "mexican-front",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "center-argentina",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "positive-emission",
    "metadata": {
     "scrolled": true
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "banned-hardwood",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "designed-third",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "democratic-singer",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "conventional-violin",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "id": "configured-pharmacy",
    "metadata": {},
    "outputs": [],
@@ -176,9 +176,9 @@
     "\n",
     "for paper in negative_sample:\n",
     "    output.append({\n",
-    "        'title': paper['title'],\n",
-    "        'abstract' : paper['abstract'].replace('\\n', ''),\n",
-    "        'authors' : paper['authors'],\n",
+    "        'title': paper['title'].replace('\\n', ' '),\n",
+    "        'abstract' : paper['abstract'].replace('\\n', ' '),\n",
+    "        'authors' : paper['authors'].replace('\\n', ' '),\n",
     "        'pdf_url' : None,\n",
     "        'url' : None,\n",
     "        'label1' : label,\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "id": "metric-country",
    "metadata": {},
    "outputs": [],
@@ -201,8 +201,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "crazy-lottery",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"  Bulk email is a primary communication channel within organizations, with all-company messages and regular newsletters serving as a mechanism for making employees aware of policies, events, and other needed messages. Ineffective communication could result in substantial wasted employee time and lack of awareness or compliance. Previous studies on organizational emails focused mostly on recipients. However, organizational bulk email systems are a multi-stakeholder problem including recipients, communicators, and organization itself. Thus we study the effectiveness, experience, practice, and assessments of organizational bulk email systems from different stakeholders' perspectives.   We conducted a quantitative study within a large organization to understand the extent to which the recipients retained the messages from the organizational bulk emails they received.   We conducted a qualitative study with communicators and recipients within the organization. We delved into the bulk email distributing mechanisms of the communicators, the reading behaviors of recipients, and the bulk emails' values from communicators and recipients' points of view.   We found that the recipients were not retaining most of the messages from the bulk emails though they opened a large number of them. The tools for designing and distributing organizational bulk email for communicators were very limited. The assessments on bulk emails' values and effectiveness were different between communicators and recipients. We discussed possible solutions that could improve organizational bulk emails' designing and distributing mechanisms. \""
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output[11]['abstract']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "administrative-orleans",
    "metadata": {},
    "outputs": [],
    "source": []
