Add BoW model and update requirements

--- a/src/Pipeline Example.ipynb
+++ b/src/Pipeline Example.ipynb
@@ -28,6 +28,7 @@
    ],
    "source": [
     "from LanguageModels.Word2Vec import Word2Vec\n",
+    "from LanguageModels.BagOfWords import BagOfWords\n",
     "from Preprocessing.LemmatizerPreprocessor import LemmatizerPreprocessor\n",
     "from Preprocessing.DataLoader import DataLoader\n",
     "import numpy as np"
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "angry-passenger",
    "metadata": {},
    "outputs": [],
@@ -64,7 +65,8 @@
    "source": [
     "# Load language model\n",
     "# !wget http://nlp.stanford.edu/data/glove.6B.zip\n",
-    "w2v = Word2Vec(path='../data/glove.6B/glove.6B.200d.txt') "
+    "# w2v = Word2Vec(path='../data/glove.6B/glove.6B.200d.txt') \n",
+    "bow = BagOfWords()"
    ]
   },
   {
@@ -74,84 +76,33 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3be2cda399864dbb9d9630a384ddaf19",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1450 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1327, 200) (1327, 2)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00a721e170b94969a7f7113d3321ce69",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1450 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1327, 200) (1327, 1) [11]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffa479903f4645ef8480e712d59a75a1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1450 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1327, 200) (1327, 1) [1]\n"
+      "(1327, 10560) (1327, 2)\n",
+      "(1327, 10560) (1327, 1) [11]\n",
+      "(1327, 10560) (1327, 1) [1]\n"
      ]
     }
    ],
    "source": [
     "# apply preprocessing and vectorization to create text features\n",
     "\n",
-    "# multilabel case\n",
-    "X, y = w2v.featurize(data, lp, mode='multilabel')\n",
+    "#### multilabel case\n",
+    "# X, y = w2v.featurize(data, lp, mode='multilabel')\n",
+    "X, y = bow.featurize(data, lp, mode='multilabel')\n",
     "\n",
     "print(X.shape, y.shape)\n",
     "\n",
-    "# multiclass case\n",
-    "X, y = w2v.featurize(data, lp, mode='multiclass')\n",
+    "#### multiclass case\n",
+    "# X, y = w2v.featurize(data, lp, mode='multiclass')\n",
+    "X, y = bow.featurize(data, lp, mode='multiclass')\n",
     "\n",
     "print(X.shape, y.shape, max(y))\n",
     "\n",
-    "# binary case (note 0=in conference, 1=not in conference)\n",
-    "X, y = w2v.featurize(data, lp, mode='binary')\n",
+    "#### binary case (note 0=in conference, 1=not in conference)\n",
+    "# X, y = w2v.featurize(data, lp, mode='binary')\n",
+    "X, y = bow.featurize(data, lp, mode='binary')\n",
     "\n",
     "print(X.shape, y.shape, max(y))"
    ]
