Add finetuned glove model language model

--- a/src/Pipeline Example.ipynb
+++ b/src/Pipeline Example.ipynb
@@ -2,33 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "ranking-bermuda",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\Ryan\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\Ryan\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\Ryan\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     C:\\Users\\Ryan\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from LanguageModels.Word2Vec import Word2Vec\n",
     "from LanguageModels.BagOfWords import BagOfWords\n",
+    "from LanguageModels.CustomWord2Vec import CustomWord2Vec\n",
     "from Preprocessing.LemmatizerPreprocessor import LemmatizerPreprocessor\n",
     "from Preprocessing.DataLoader import DataLoader\n",
     "import numpy as np"
@@ -36,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "angry-passenger",
    "metadata": {},
    "outputs": [],
@@ -47,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "strange-bloom",
    "metadata": {},
    "outputs": [],
@@ -58,51 +39,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "toxic-mobile",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load language model\n",
+    "#### Load language model\n",
+    "\n",
+    "## Word2Vec Pretrained\n",
     "# !wget http://nlp.stanford.edu/data/glove.6B.zip\n",
     "# w2v = Word2Vec(path='../data/glove.6B/glove.6B.200d.txt') \n",
-    "bow = BagOfWords()"
+    "\n",
+    "## Word2Vec Pretrained + Finetuned\n",
+    "w2v = CustomWord2Vec('../data/glove.6B/glove.6B.200d.finetuned.p')\n",
+    "\n",
+    "## Bag Of Words\n",
+    "# bow = BagOfWords()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "refined-offense",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1327, 10560) (1327, 2)\n",
-      "(1327, 10560) (1327, 1) [11]\n",
-      "(1327, 10560) (1327, 1) [1]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb1d38e417ba43a49373abc73d63a957",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1450 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# apply preprocessing and vectorization to create text features\n",
     "\n",
     "#### multilabel case\n",
-    "# X, y = w2v.featurize(data, lp, mode='multilabel')\n",
-    "X, y = bow.featurize(data, lp, mode='multilabel')\n",
+    "X, y = w2v.featurize(data, lp, mode='multilabel')\n",
+    "# X, y = bow.featurize(data, lp, mode='multilabel')\n",
     "\n",
     "print(X.shape, y.shape)\n",
     "\n",
     "#### multiclass case\n",
-    "# X, y = w2v.featurize(data, lp, mode='multiclass')\n",
-    "X, y = bow.featurize(data, lp, mode='multiclass')\n",
+    "X, y = w2v.featurize(data, lp, mode='multiclass')\n",
+    "# X, y = bow.featurize(data, lp, mode='multiclass')\n",
     "\n",
     "print(X.shape, y.shape, max(y))\n",
     "\n",
     "#### binary case (note 0=in conference, 1=not in conference)\n",
-    "# X, y = w2v.featurize(data, lp, mode='binary')\n",
-    "X, y = bow.featurize(data, lp, mode='binary')\n",
+    "X, y = w2v.featurize(data, lp, mode='binary')\n",
+    "# X, y = bow.featurize(data, lp, mode='binary')\n",
     "\n",
     "print(X.shape, y.shape, max(y))"
    ]
