Added custom language model

--- a/src/Pipeline Example.ipynb
+++ b/src/Pipeline Example.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "toxic-mobile",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,11 @@
     "# w2v = Word2Vec(path='../data/glove.6B/glove.6B.200d.txt') \n",
     "\n",
     "## Word2Vec Pretrained + Finetuned\n",
-    "w2v = CustomWord2Vec('../data/glove.6B/glove.6B.200d.finetuned.p')\n",
+    "# w2v = CustomWord2Vec('../data/glove.6B/glove.6B.200d.finetuned.p')\n",
+    "\n",
+    "\n",
+    "## Custom word2vec\n",
+    "w2v = CustomWord2Vec('../data/customw2v.p')\n",
     "\n",
     "## Bag Of Words\n",
     "# bow = BagOfWords()"
@@ -66,7 +70,49 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb1d38e417ba43a49373abc73d63a957",
+       "model_id": "8f8354f8d67042739ddcd5fbc8542fee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1450 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1327, 13) (1327, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "28f1deee086c46eab2a14efc7e7151ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1450 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1327, 13) (1327, 1) [11]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "733d649119754ad49b847082daefa6bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,22 +128,22 @@
     "# apply preprocessing and vectorization to create text features\n",
     "\n",
     "#### multilabel case\n",
-    "X, y = w2v.featurize(data, lp, mode='multilabel')\n",
+    "X_multilabel, y_multilabel = w2v.featurize(data, lp, mode='multilabel')\n",
     "# X, y = bow.featurize(data, lp, mode='multilabel')\n",
     "\n",
-    "print(X.shape, y.shape)\n",
+    "print(X_multilabel.shape, y_multilabel.shape)\n",
     "\n",
     "#### multiclass case\n",
-    "X, y = w2v.featurize(data, lp, mode='multiclass')\n",
+    "X_multiclass, y_multiclass = w2v.featurize(data, lp, mode='multiclass')\n",
     "# X, y = bow.featurize(data, lp, mode='multiclass')\n",
     "\n",
-    "print(X.shape, y.shape, max(y))\n",
+    "print(X_multiclass.shape, y_multiclass.shape, max(y_multiclass))\n",
     "\n",
     "#### binary case (note 0=in conference, 1=not in conference)\n",
-    "X, y = w2v.featurize(data, lp, mode='binary')\n",
+    "X_binary, y_binary = w2v.featurize(data, lp, mode='binary')\n",
     "# X, y = bow.featurize(data, lp, mode='binary')\n",
     "\n",
-    "print(X.shape, y.shape, max(y))"
+    "print(X_binary.shape, y_binary.shape, max(y_binary))"
    ]
   },
   {
